sub title PFS and OS edit

--- a/vignettes/kaplan_meier.Rmd
+++ b/vignettes/kaplan_meier.Rmd
@@ -133,7 +133,7 @@ https://www.danieldsjoberg.com/ggsurvfit/articles/gallery.html
 
 Kaplan-Meier by Daniel D. Sjoberg, Mark Baillie, Charlotta Fruechtenicht, Steven Haesendonckx, Tim Treis.
 
-## Progression-Free Survival (PFS)
+- **Progression-Free Survival (PFS)**
 
 ```{r fig.width = 7 , fig.height = 5}
 km_PFS = survfit2(Surv(time_pfs, status_PFS) ~ surg, data = data_surv_v2) %>%
@@ -163,7 +163,7 @@ km_PFS +
 ```
 
 
-## Overall Survival (OS)
+- **Overall Survival (OS)**
 
 The function scale_ggsurvfit() can be used to automatically adjust the axes limits of Kaplan-Meier plots to better fit the data and improve visualisation.
 **Note:** The scale_ggsurvfit() function automatically scales the y-axis in percentage.
