--- a/vignettes/kaplan_meier.Rmd
+++ b/vignettes/kaplan_meier.Rmd
@@ -117,6 +117,8 @@ head(data_surv_v2)
 
 # Kaplan-Meier Analysis
 
+## Generate survival estimates using `survfit2()`
+
 We recommend using the `ggsurvfit` package which uses `survfit2()`with the following syntax:
 
 ```{r}
@@ -126,9 +128,7 @@ km.model_PFS
 tidy_survfit(km.model_PFS, times = c(0.05, 0.10, 0.20)) %>% 
   select(strata, time, n.risk, n.event, estimate, conf.high, conf.low)
 ```
-
-
-Generate survival curves using `ggsurvfit` package
+## Generate survival curves using `ggsurvfit` package**
 
 For full documentation, visit the [ggsurvfit website](https://www.danieldsjoberg.com/ggsurvfit/articles/gallery.html#kmunicate).  
 
@@ -137,7 +137,8 @@ To cite their work, refer to the following:
 >Sjoberg D, Baillie M, Fruechtenicht C, Haesendonckx S, Treis T (2025). *ggsurvfit: Flexible Time-to-Event Figures.*  
 >R package version 1.1.0. Available at: [https://www.danieldsjoberg.com/ggsurvfit/](https://www.danieldsjoberg.com/ggsurvfit/). 
 
-## Progression-Free Survival (PFS)
+
+### Progression-Free Survival (PFS)
 
 ```{r fig.width = 7 , fig.height = 5}
 km_PFS = survfit2(Surv(time_pfs, status_PFS) ~ surg, data = data_surv_v2) %>%
@@ -153,7 +154,6 @@ km_PFS = survfit2(Surv(time_pfs, status_PFS) ~ surg, data = data_surv_v2) %>%
 km_PFS
 ```
 
-
 **This plot can be further customised, for example:**
 
 ```{r fig.width = 7 ,fig.height = 5}
@@ -167,7 +167,7 @@ km_PFS +
 ```
 
 
-## Overall Survival (OS)
+### Overall Survival (OS)
 
 The function `scale_ggsurvfit()` can be used to automatically adjust the axes limits of Kaplan-Meier plots to better fit the data and improve visualisation.
 **Note:** The `scale_ggsurvfit()` function automatically scales the y-axis in percentage.
