--- a/vignettes/ae_grade.Rmd
+++ b/vignettes/ae_grade.Rmd
@@ -12,7 +12,43 @@ date: "2025-01-30"
 
 <!-- https://oncostat.github.io/grstat/articles/adverse_events_sas.html -->
 
-# Data
+# Introduction
+
+This vignette demonstrates how to implement adverse event (AE) tables in R using the 'grstat' package. AE tables are a standard approach in clinical research for assessing event severity (grade) and specifying the exact AE terms.
+
+In this article, three types of AE tables are presented:
+
+Maximum AE grade per patient (for both single-arm and two-arm trials)
+
+All AE grades per patient (for both single-arm and two-arm trials)
+
+Maximum AE grade per patient by AE term (for both single-arm and two-arm trials)
+
+The vignette also outlines the steps for calculating treatment-emergent adverse events (TEAEs).
+
+This vignette covers the following steps:
+
+Overview of the dataset, using the simulated dataset grstat_example
+
+Creation of various AE tables for single-arm and two-arm trials, including subgroup analysis based on whether the AE is:
+
+Related to the study drug
+
+Leading to treatment interruption or discontinuation
+
+Requiring dose reduction
+
+Additionally, Adverse Events of Special Interest (AESI) tables will also be demonstrated.
+
+First, install packages if needed and load them.
+
+```{r setup}
+library(grstat)
+library(flextable)
+library(dplyr)
+```
+
+# Data Overview
 
 The function grstat_example() is used as an example dataset to illustrate the data usage.
 
@@ -21,13 +57,6 @@ This analysis focuses on two datasets:
 - ae, which contains data on adverse events.
 
 - enrolres, which includes all patients and their respective treatment arms."
-
-```{r setup}
-library(grstat)
-library(flextable)
-library(dplyr)
-```
-
 
 ```{r}
 # #| label: "setup"
