--- a/vignettes/kaplan_meier.Rmd
+++ b/vignettes/kaplan_meier.Rmd
@@ -13,8 +13,6 @@ vignette: >
 
 # Introduction
 
-This vignette illustrates the implementation of Kaplan-Meier survival analysis in R using the survival and `ggsurvfit` packages. The Kaplan-Meier method is a standard approach in clinical research for estimating survival functions and comparing time-to-event outcomes between groups.
-
 In this example, two key survival endpoints are analysed:
 
 -   Progression-Free Survival (PFS): Defined as the time from treatment initiation to either disease progression or death.
@@ -27,7 +25,7 @@ This vignette covers the following steps:
 
 -   Creation of time-to-event and event indicator variables.
 
--   Fitting of Kaplan-Meier models.
+-   Compute Kaplan-meier estimator and fitting of Kaplan-Meier curves
 
 -   Visualization of survival curves accompanied by risk tables.
 
@@ -42,9 +40,9 @@ library(grstat)
 library(dplyr)
 library(survival)
 library(ggsurvfit)
-```
+library(glue)
 
-# Data Preparation
+```
 
 ## Data Overview
 
@@ -81,19 +79,19 @@ head(data_surv)
 dim(data_surv)
 ```
 
+# Data Preparation
+
 ## Variable Creation
 
-The purpose of this section is to create status and time status and time variables for Progression-Free Survival (PFS) and Overall Survival (OS).
+The purpose of this section is to create status and time variables for Progression-Free Survival (PFS) and Overall Survival (OS).
 
 First, the variables time and status (indicating whether an event occurred or was censored) need to be created to enable the use of various functions.
 
--   Time variable:
-
-    The time variable represents the duration from a defined starting point (e.g., diagnosis, study enrollment, or start of treatment) to the time at which the patient's status is recorded (e.g. death, disease progression, recurrence or last news). It is a numeric variable measured in units such as days, months, or years, depending on the study's duration and requirements.
+-   Time variable: The time variable represents the duration from a defined starting point (e.g., diagnosis, study enrollment, or start of treatment) to the time at which the patient's status is recorded (e.g. death, disease progression, recurrence or last news). It is a numeric variable measured in units such as days, months, or years, depending on the study's duration and requirements.
 
 -   Status variable: The status variable is binary, indicating whether the event has occurred (event = 1) or not (censored = 0) for each subject by the end of the study period.
 
-An event (1) indicates that the subjects experienced the event of interest (e.g., death, relapse, transplant failure, etc.).
+An event (1) indicates that the subject experienced the event of interest (e.g., death, relapse, transplant failure, etc.).
 
 Censored (0) refers to those subjects who did not experience the event during the study. For these individuals, the 'time-to-event' is considered censored, indicating that we only know they did not experience the event up to a certain point.
 
@@ -121,8 +119,10 @@ head(data_surv_v2)
 We recommend using the `ggsurvfit` package which uses `survfit2()`with the following syntax:
 
 ```{r}
-km.model_PFS = survfit2(Surv(time_pfs, status_PFS) ~ surg,data = data_surv_v2)
+km.model_PFS = survfit2(Surv(time_pfs, status_PFS) ~ surg, data = data_surv_v2)
 km.model_PFS
+
+# Specific time points can be chosen to extract the estimated survival probabilities and related statistics from the Kaplan-Meier survival model (km.model_PFS). Here, the time points were set at 0.05, 0.10, and 0.20.
 
 tidy_survfit(km.model_PFS, times = c(0.05, 0.10, 0.20)) %>% 
   select(strata, time, n.risk, n.event, estimate, conf.high, conf.low)
@@ -139,7 +139,7 @@ To cite their work, refer to the following:
 
 ### Progression-Free Survival (PFS)
 
-```{r fig.width = 7 , fig.height = 5}
+```{r fig.width = 8 , fig.height = 5}
 km_PFS = survfit2(Surv(time_pfs, status_PFS) ~ surg, data = data_surv_v2) %>%
   ggsurvfit(linetype_aes = TRUE) +
   add_confidence_interval() +
@@ -151,17 +151,21 @@ km_PFS = survfit2(Surv(time_pfs, status_PFS) ~ surg, data = data_surv_v2) %>%
   scale_x_continuous(expand = c(0.02, 0)) +
   theme(legend.position="inside", legend.position.inside = c(0.85, 0.85))
 km_PFS
+
+N_total <- nrow(data_surv_v2)
+n_event <- sum(data_surv_v2$status_PFS == 1)
+title_text <- glue("Progression-Free Survival (N={N_total}, n event={n_event})")
 ```
 
 **This plot can be further customised, for example:**
 
-```{r fig.width = 7 ,fig.height = 5}
+```{r fig.width = 8 ,fig.height = 5}
 km_PFS +
   add_censor_mark(size = 4, alpha = 0.4) +
   labs(
     x = "Time from beginning of treatment to progression or death (months)",
     y = "Progression-Free Survival",
-    title = "Progression-Free Survival, (N=929, n event=440)"
+    title = title_text
   ) 
 ```
 
@@ -169,7 +173,7 @@ km_PFS +
 
 The function `scale_ggsurvfit()` can be used to automatically adjust the axes limits of Kaplan-Meier plots to better fit the data and improve visualisation. **Note:** The `scale_ggsurvfit()` function automatically scales the y-axis in percentage.
 
-```{r fig.width = 7 , fig.height = 5}
+```{r fig.width = 8 , fig.height = 5}
 km_OS = survfit2(Surv(time_OS, status_OS) ~ surg, data = data_surv_v2) %>%
   ggsurvfit(linetype_aes = TRUE) +
   add_confidence_interval() +
@@ -180,11 +184,16 @@ km_OS = survfit2(Surv(time_OS, status_OS) ~ surg, data = data_surv_v2) %>%
   scale_ggsurvfit()+
   theme(legend.position = "inside", legend.position.inside = c(0.85, 0.85))
 
+N_total <- nrow(data_surv_v2)
+n_event <- sum(data_surv_v2$status_OS == 1)
+title_text <- glue("Overall Survival, (N={N_total}, n event={n_event})")
+
+
 km_OS +
   add_censor_mark(size = 4, alpha = 0.4) +
   labs(
     x = "Time from beginning of treatment to death (months)",
     y = "Overall Survival",
-    title = "Overall Survival, (N=929, n event=468)"
+    title =title_text 
   ) 
 ```
